--- a/style.css
+++ b/style.css
@@ -7,14 +7,19 @@
 
 html {
 	font-size: 62.5%;
-}
-
-body {
-	font-family: 'Poppins', sans-serif;
+	--header1: calc(2rem + 1vw);
+	--header2: calc(3.5rem + 1vw);
+	--header3: calc(3rem + 1vw);
+	--header4: calc(2.4rem + 1vw);
+	--text: calc(1.5rem + 1vw);
+	--big: calc(2.4rem + 1vw);
+	--special-color: #906272;
+	--background-color: #414141;
+	--gray-text: #525252;
 }
 
 h1 {
-	font-size: 2.6rem;
+	font-size: var(--header1);
 }
 
 li,
@@ -22,24 +27,33 @@ button,
 label,
 input,
 p {
-	font-size: 2rem;
+	font-size: var(--text);
 }
 
 h2 {
-	font-size: 4.8rem;
+	font-size: var(--header2);
 }
 
 h3 {
-	font-size: 3rem;
-	font-weight: normal;
+	font-size: var(--header3);
 }
 
 h4,
 h5 {
-	font-size: 2.8rem;
+	font-size: var(--header4);
+}
+
+.flex {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+ul {
+	list-style: none;
 }
 
 a {
-	color: white;
 	text-decoration: none;
 }
