--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ nav {
 	transform: translateY(10%) rotateZ(-10deg) rotateX(90deg);
 	animation: plant-entrance 1.5s ease-in-out 0.5s forwards, plant-shake 2.5s infinite ease alternate-reverse 2s;
 	transform-origin: bottom;
+	max-height: 80%;
 }
 
 .plant2 {
@@ -201,6 +202,14 @@ nav {
 }
 
 @media screen and (max-width: 894px) {
+	.hero {
+		width: 100%;
+	}
+
+	.hero-introduction p {
+		padding: 5rem 3rem;
+	}
+	/* Burger Menu */
 	.burger {
 		display: block;
 		position: relative;
