--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ nav {
 
 .hero-introduction p {
 	padding: 5rem 10rem;
+	color: var(--gray-text);
 }
 
 .hero-introduction h2 {
@@ -201,6 +202,53 @@ nav {
 	display: none;
 }
 
+/* About Section */
+.about {
+	min-height: 100vh;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.about-text {
+	flex: 2 1 40rem;
+	justify-content: space-around;
+	color: white;
+	background: var(--background-color);
+}
+
+.about-text div {
+	padding: 3rem 6rem;
+}
+
+.about-text h3 {
+	padding: 2rem 0rem;
+	font-family: "Ruhl Medium";
+}
+
+.about-text h2 {
+	font-family: "Vibes";
+	padding: 4rem;
+}
+
+.about-image {
+	flex: 1 1 40rem;
+	position: relative;
+}
+
+.about-image h5 {
+	position: absolute;
+	letter-spacing: 2rem;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%, -20%);
+}
+
+.about-image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
 @media screen and (max-width: 894px) {
 	.hero {
 		width: 100%;
@@ -272,5 +320,10 @@ nav {
 
 	.menu-check:checked ~ .burger span:nth-child(2) {
 		opacity: 0;
+	}
+
+	/* About Section */
+	.about-text div {
+		padding: 3rem 3rem;
 	}
 }
