--- a/style.css
+++ b/style.css
@@ -250,6 +250,43 @@ nav {
 	object-fit: cover;
 }
 
+/* Gallery Section */
+.gallery {
+	display: grid;
+	min-height: 100vh;
+	grid-template-columns: repeat(3, 1fr);
+	gap: .6rem;
+	row-gap: .6rem;
+	position: relative;
+}
+
+.gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.gallery1 {
+	grid-column: 1 / 3;
+}
+
+.gallery2 {
+	grid-column: 3 / 4;
+	grid-row: 1 / 3;
+}
+
+/* .gallery-head {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+	background: var(--background-color);
+	padding: 5rem 10rem;
+	text-align: center;
+	opacity: 0.9;
+} */
+
 @media screen and (max-width: 894px) {
 	.hero {
 		width: 100%;
@@ -330,5 +367,19 @@ nav {
 
 	.about-text p {
 		font-size: var(--text-mobile);
+	}
+
+	/* Gallery Section */
+	.gallery img {
+		grid-row: auto;
+		grid-column: auto;
+	}
+
+	.gallery {
+		grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+	}
+
+	.gallery-head {
+		display: none;
 	}
 }
