--- a/style.css
+++ b/style.css
@@ -255,8 +255,8 @@ nav {
 	display: grid;
 	min-height: 100vh;
 	grid-template-columns: repeat(3, 1fr);
-	gap: .6rem;
-	row-gap: .6rem;
+	gap: 0.6rem;
+	row-gap: 0.6rem;
 	position: relative;
 }
 
